k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      serviceAccountName: app
      containers:
      - name: myapp
        image: 042617239394.dkr.ecr.eu-central-1.amazonaws.com/myapp:bootstrap
        ports:
        - containerPort: 3000
