k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: myapp
